@@ -1550,10 +1550,17 @@ int mbedtls_rsa_rsassa_pss_sign( mbedtls_rsa_context *ctx,
         return( MBEDTLS_ERR_RSA_BAD_INPUT_DATA );
 
     hlen = mbedtls_md_get_size( md_info );
-    slen = hlen;
 
-    if( olen < hlen + slen + 2 )
+    /* Calculate the largest possible salt length. The salt length chosen will
+     * be the minimum of either the hash length or the key size minus the hash
+     * length minus 2 bytes. The salt length is always at least the hash length
+     * minus 2 bytes. This complies with FIPS 186-4 §5.5 (e) and RFC 8017
+     * (PKCS#1 v2.2) §9.1.1 step 3. */
+    const size_t max_slen = olen - hlen - 2;
+    slen = max_slen < hlen ? max_slen : hlen;
+    if (slen < hlen - 2) {
         return( MBEDTLS_ERR_RSA_BAD_INPUT_DATA );
+    }
 
     memset( sig, 0, olen );
 
@@ -1563,7 +1570,7 @@ int mbedtls_rsa_rsassa_pss_sign( mbedtls_rsa_context *ctx,
 
     /* Note: EMSA-PSS encoding is over the length of N - 1 bits */
     msb = mbedtls_mpi_bitlen( &ctx->N ) - 1;
-    p += olen - hlen * 2 - 2;
+    p += olen - hlen - slen - 2;
     *p++ = 0x01;
     memcpy( p, salt, slen );
     p += slen;
